--- a/app/src/main/res/drawable/ic_splash2.xml
+++ b/app/src/main/res/drawable/ic_splash2.xml
@@ -1,5 +1,8 @@
-<vector android:height="240dp" android:viewportHeight="614"
-    android:viewportWidth="614" android:width="240dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="200dp" android:viewportHeight="614"
+    android:viewportWidth="614" android:width="200dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <group
+        android:translateX="2"
+        android:translateY="2">
     <path android:fillColor="#7ed0ec"
         android:pathData="M307.2,0L307.2,0A307.2,307.2 0,0 1,614.4 307.2L614.4,307.2A307.2,307.2 0,0 1,307.2 614.4L307.2,614.4A307.2,307.2 0,0 1,0 307.2L0,307.2A307.2,307.2 0,0 1,307.2 0z" android:strokeWidth="0"/>
     <path android:fillColor="#E6E7E8" android:pathData="M552.75,418.37L552.75,109.69L552.75,83.13L517.59,130.17l-35.15,-45.16L447.35,130.17l-35.09,-45.16L377.17,130.17l-35.04,-45.16l-35.09,45.16l-35.08,-45.16L236.89,130.17l-35.05,-45.16L166.77,130.17l-35.04,-45.16L96.67,130.17L61.65,83.13l0.01,26.56v395.52c0,14.47 11.6,26.06 25.91,26.06h352.29L552.75,418.37z"/>
@@ -16,4 +19,5 @@
     <path android:fillColor="#000000" android:pathData="M106.54,237.37L507.82,237.37c5.77,0 10.45,-4.68 10.45,-10.45v-56.45c0,-5.77 -4.68,-10.45 -10.45,-10.45L106.54,160.03c-5.77,0 -10.45,4.68 -10.45,10.45v56.45C96.09,232.69 100.77,237.37 106.54,237.37zM116.99,180.92h380.38v35.55L116.99,216.47L116.99,180.92z"/>
     <path android:fillColor="#000000" android:pathData="M213.11,442.81c34.76,0 63.04,-28.28 63.04,-63.04c0,-5.77 -4.68,-10.45 -10.45,-10.45h-46.8c-5.77,0 -10.45,4.68 -10.45,10.45c0,5.77 4.68,10.45 10.45,10.45h35.04c-4.66,18.2 -21.2,31.7 -40.83,31.7c-23.24,0 -42.15,-18.91 -42.15,-42.15c0,-23.24 18.91,-42.15 42.15,-42.15c10.01,0 19.71,3.57 27.31,10.05c4.39,3.74 10.99,3.21 14.73,-1.18c3.74,-4.39 3.21,-10.99 -1.18,-14.73c-11.38,-9.7 -25.89,-15.04 -40.86,-15.04c-34.76,0 -63.04,28.28 -63.04,63.04S178.35,442.81 213.11,442.81z"/>
     <path android:fillColor="#000000" android:pathData="M319.68,262.75L106.54,262.75c-5.77,0 -10.45,4.68 -10.45,10.45L96.09,486.34c0,5.77 4.68,10.45 10.45,10.45h213.14c5.77,0 10.45,-4.68 10.45,-10.45L330.13,273.2C330.13,267.43 325.45,262.75 319.68,262.75zM309.23,475.89L116.99,475.89L116.99,283.65h192.24L309.23,475.89z"/>
+    </group>
 </vector>
